high-contrast.less: Fix contrast for overdue list items

--- a/public/css/themes/high-contrast.less
+++ b/public/css/themes/high-contrast.less
@@ -205,6 +205,15 @@
   }
 }
 
+.icinga-module.module-icingadb .list-item.overdue {
+  background: none;
+
+  header > *:not(time),
+  .caption {
+    opacity: 1;
+  }
+}
+
 .controls input.search,
 input.search {
   background-image: url(../img/icons/search.png);
